--- a/Main.html
+++ b/Main.html
@@ -153,6 +153,55 @@
                         <p>2.4 M de vistas • hace 5 años</p>
                     </div>
             </section>
+            <section class="section-two">
+                <section class="video1">
+                        <div class="thumbnail-1">
+                        <img src="">
+                        </div>
+                    <section class="titular1">
+                        <div class="channel1">
+                        </div>
+                        <div class="video1-title">
+                        </div>
+                        <div class="video-option">
+                        </div>
+                    </section>
+                        <div class="channel1-name">
+                        </div>
+                </section>
+                <section class="video2">
+                        <div class="thumbnail-2">
+                        <img src="">
+                        </div>
+                    <section class="titular2">
+                        <div class="channel2">
+                        </div>
+                        <div class="video2-title">
+                        </div>
+                        <div class="video-option">
+                        </div>
+                    </section>
+                        <div class="channel2-name">
+                        </div>
+                </section>
+                <section class="video3">
+                        <div class="thumbnail-3">
+                        <img src="">
+                        </div>
+                    <section class="titular3">
+                        <div class="channel3">
+                        </div>
+                        <div class="video3-title">
+                        </div>
+                        <div class="video-option">
+                        </div>
+                    </section>
+                        <div class="channel3-name">
+                        </div>
+                </section>
+
+
+            </section>
         </section>
     </section>
  </main>
