--- a/Main.html
+++ b/Main.html
@@ -103,7 +103,7 @@
             </section>
             <section class="videos">
                 <section class="videos-section">
-                    <section class="video-container" id="v-1"> 
+                    <section class="video-container" id="v-1">
                         <div class="thumbnail-1">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-11 224641.png" id="image1">
                         </div>
@@ -130,7 +130,7 @@
                     <section class="video-container" id="v-2">
                         <div class="thumbnail-2">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-12 194731.png"
-                              alt="miniatura-2" id="image2">
+                                alt="miniatura-2" id="image2">
                         </div>
                         <section class="titular-channel-2">
                             <div class="channel-logo-2">
@@ -138,16 +138,17 @@
                                     alt="channel-logo" id="channel2-logo">
                             </div>
                             <div class="video-title-2">
-                                <p><strong>HICE UNA ESFERA PERFECTA DE TIERRA ORDINARIA - UNA ANTIGUA TÉCNICA </strong></p>
+                                <p><strong>HICE UNA ESFERA PERFECTA DE TIERRA ORDINARIA - UNA ANTIGUA TÉCNICA </strong>
+                                </p>
                             </div>
                             <div class="video-option-2">
-                                    <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="options."
-                                        style="width: 30px; height: 30px;">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="options."
+                                    style="width: 30px; height: 30px;">
                             </div>
                         </section>
                         <div class="viewers-name-2">
-                                <p>El Mundo de Slivki</p>
-                                <p>2.6 M de vistas • hace 3 semanas</p>
+                            <p>El Mundo de Slivki</p>
+                            <p>2.6 M de vistas • hace 3 semanas</p>
                         </div>
                     </section>
                     <section class="video-container" id="v-3">
@@ -175,17 +176,20 @@
                     </section>
                     <section class="video-container" id="v-4">
                         <div class="thumbnail-4">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 133608.png" alt="miniatura-v4" id="image4">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 133608.png"
+                                alt="miniatura-v4" id="image4">
                         </div>
                         <section class="titular-channel-4">
                             <div class="channel-logo-4">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 133633.png" alt="logo canal 4" id="video4-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 133633.png"
+                                    alt="logo canal 4" id="video4-logo">
                             </div>
                             <div class="video-title-4">
                                 <p><strong>Los discos Bluray NO deberian EXISTIR LA DURA REALIDAD ☢️</strong></p>
                             </div>
                             <div class="video-option-4">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones-v4" id="option-v4">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones-v4"
+                                    id="option-v4">
                             </div>
                         </section>
                         <div class="viewers-name-4">
@@ -195,51 +199,60 @@
                     </section>
                     <section class="video-container" id="v-5">
                         <div class="thumbnail-5">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 173915.png" alt="miniatura-5" id="image5">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 173915.png"
+                                alt="miniatura-5" id="image5">
                         </div>
                         <section class="titular-channel-5">
                             <div class="channel-logo-5">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 173927.png" alt="logo canal" id="video5-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 173927.png"
+                                    alt="logo canal" id="video5-logo">
                             </div>
                             <div class="video-title-5">
                                 <p><strong>La Entrada Decía “NO PASAR”... Pero Decidieron Ignorarla</strong></p>
                             </div>
                             <div class="video-option-5">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones de v4" id="option-v5">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones de v4"
+                                    id="option-v5">
                             </div>
                         </section>
                         <div class="viewers-name-5">
                             <p>Misterios Sumergidos</p>
                             <p>48 k vistas • hace 3 semanas</p>
                         </div>
-                    </section> 
+                    </section>
                     <section class="video-container" id="v-6">
                         <div class="thumbnail-6">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 180228.png" alt="miniatura-6" id="image6">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 180228.png"
+                                alt="miniatura-6" id="image6">
                         </div>
                         <section class="titular-channel-6">
                             <div class="channel-logo-6">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 180245.png" id="video6-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 180245.png"
+                                    id="video6-logo">
                             </div>
                             <div class="video-title-6">
-                                <p><strong>Pato es denunciado por atacar a mascotas y recibe prisión domiciliaria</strong></p>
+                                <p><strong>Pato es denunciado por atacar a mascotas y recibe prisión
+                                        domiciliaria</strong></p>
                             </div>
                             <div class="video-option-6">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones video 6" id="option-v6">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg"
+                                    alt="opciones video 6" id="option-v6">
                             </div>
                         </section>
                         <div class="viewers-name-6">
                             <p>EXCELSIOR</p>
                             <p>139 k vistas • hace 6 días</p>
                         </div>
-                    </section> 
+                    </section>
                     <section class="video-container" id="v-7">
                         <div class="thumbnail-7">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 183052.png" alt="miniatura-7" id="image7">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 183052.png"
+                                alt="miniatura-7" id="image7">
                         </div>
                         <section class="titular-channel-7">
                             <div class="channel-logo-7">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 183118.png" alt="logo de canal 7" id="video7-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 183118.png"
+                                    alt="logo de canal 7" id="video7-logo">
                             </div>
                             <div class="video-title-7">
                                 <p><strong>¿Qué pasa si entras a un microondas? (según la ciencia)</strong></p>
@@ -259,7 +272,8 @@
                         </div>
                         <section class="titular-channel-8">
                             <div class="channel-logo-8">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 183849.png" id="video8-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 183849.png"
+                                    id="video8-logo">
                             </div>
                             <div class="video-title-8">
                                 <p><strong>TODAS las CLASES SOCIALES explicadas en 10 minutos</strong></p>
@@ -279,7 +293,8 @@
                         </div>
                         <section class="titular-channel-9">
                             <div class="channel-logo-9">
-                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 190123.png" id="video9-logo">
+                                <img src=".\images\videos images\Captura de pantalla 2025-08-13 190123.png"
+                                    id="video9-logo">
                             </div>
                             <div class="video-title-9">
                                 <p><strong>¿Qué es ese bicho en la pared?/La polilla del estuche</strong></p>
@@ -292,7 +307,7 @@
                             <p>Guia Salvaje</p>
                             <p>48 k vistas • hace 1 año</p>
                         </div>
-                    </section> 
+                    </section>
                 </section>
             </section>
     </main>
