--- a/Main.html
+++ b/Main.html
@@ -14,21 +14,19 @@
             <section class="upper-navbar">
                 <div class="flex-start">
                     <div class="logo-container">
-                        <img src=".\images\images navbar\hamburger-2-svgrepo-com.svg" alt="burger" id="burger-icon">
+                        <img src=".\images\images navbar\hamburger-2-svgrepo-com.svg" alt="burger" id="burger-icon" class="logo-burger">
                         <img src=".\images\images navbar\Captura de pantalla 2025-08-08 102858.png" alt="logo" id="logo"
-                            style="width: 124px;">
+                             class="logo-youtube">
                     </div>
                 </div>
                 <div class="flex-center">
                     <div class="search-bar">
                         <input id="search" type="search" placeholder="Buscar">
-                        <img src=".\images\images navbar\search-svgrepo-com (6).svg" alt="search-logo" id="search-logo"
-                            style="width: 25px;">"
+                        <img src=".\images\images navbar\search-svgrepo-com (6).svg" alt="search-logo" id="search-logo">
                     </div>
                     <div class="logo-mic">
                         <button class="mic-button">
-                            <img src=".\images\images navbar\microphone-svgrepo-com (9).svg" alt="microfono" class="mic"
-                                style="width: 30px;">
+                            <img src=".\images\images navbar\microphone-svgrepo-com (9).svg" alt="microfono" class="mic-button" id="microphone">
                         </button>
                     </div>
                 </div>
@@ -93,7 +91,7 @@
                         <li class="theme-style">Progamacion</li>
                         <li class="theme-style">Anime</li>
                         <li class="theme-style">Politica</li>
-                        <li class="theme-style">Lenguajes de Progamacion</li>
+                        <li class="theme-style">Progamacion</li>
                         <li class="theme-style">Desarrollo Web</li>
                         <li class="theme-style">En Tiempo Real</li>
                         <li class="theme-style">Subidos Recientemente</li>
@@ -104,22 +102,22 @@
             <section class="videos">
                 <section class="videos-section">
                     <section class="video-container" id="v-1">
-                        <div class="thumbnail-1">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-11 224641.png" id="image1">
+                        <div class="thumbnail">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-11 224641.png" alt="Miniatura-v1" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-1">
-                            <div class="channel-logo-1">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-11 225902.png"
-                                    alt="channel-video1" id="video1-logo">
+                                    alt="Logo del Canal de V1" class="channel-size">
                             </div>
-                            <div class="video-title-1">
-                                <p class="channel-title1" id="title1"><strong>“A la caza del Cartel de los Soles”: EEUU
+                            <div class="video-name-1">
+                                <p class="channel-title1" id="title-1"><strong>“A la caza del Cartel de los Soles”: EEUU
                                         difunde entrenamientos de captura</strong>
                                 </p>
                             </div>
-                            <div class="video-option-1">
+                            <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg"
-                                    style="width: 30px; height: 30px;">
+                                    alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-1">
@@ -128,22 +126,22 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-2">
-                        <div class="thumbnail-2">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-12 194731.png"
-                                alt="miniatura-2" id="image2">
+                                alt="miniatura-v2" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-2">
-                            <div class="channel-logo-2">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-12 194813.png"
-                                    alt="channel-logo" id="channel2-logo">
+                                    alt="Logo del Canal de V2" class="channel-size">
                             </div>
-                            <div class="video-title-2">
+                            <div class="video-name-2">
                                 <p><strong>HICE UNA ESFERA PERFECTA DE TIERRA ORDINARIA - UNA ANTIGUA TÉCNICA </strong>
                                 </p>
                             </div>
-                            <div class="video-option-2">
+                            <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="options."
-                                    style="width: 30px; height: 30px;">
+                                    alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-2">
@@ -152,21 +150,21 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-3">
-                        <div class="thumbnail-3">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 001526.png"
-                                alt="estoy cansado jefe" id="image3">
+                                alt="estoy cansado jefe" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-3">
-                            <div class="channel-logo-3">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src="images\videos images\Captura de pantalla 2025-08-13 001547.png"
-                                    alt="channel logo" id="video3-logo">
+                                    alt="logo del Canal de V3" class="channel-size" >
                             </div>
-                            <div class="video-title-3">
+                            <div class="video-name-3">
                                 <p><strong>¿Qué pasaría si arrojáramos nuestra basura a los volcanes?</strong></p>
                             </div>
-                            <div class="video-option-3">
+                            <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="tres puntos"
-                                    style="width: 30px; height: 30px;">
+                                    alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-3">
@@ -175,21 +173,20 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-4">
-                        <div class="thumbnail-4">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 133608.png"
-                                alt="miniatura-v4" id="image4">
+                                alt="miniatura-v4" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-4">
-                            <div class="channel-logo-4">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 133633.png"
-                                    alt="logo canal 4" id="video4-logo">
+                                    alt="logo del canal de V4" class="channel-size">
                             </div>
-                            <div class="video-title-4">
+                            <div class="video-name-4">
                                 <p><strong>Los discos Bluray NO deberian EXISTIR LA DURA REALIDAD ☢️</strong></p>
                             </div>
-                            <div class="video-option-4">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones-v4"
-                                    id="option-v4">
+                            <div class="video-options">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-4">
@@ -198,21 +195,21 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-5">
-                        <div class="thumbnail-5">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 173915.png"
-                                alt="miniatura-5" id="image5">
+                                alt="miniatura-5" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-5">
-                            <div class="channel-logo-5">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 173927.png"
-                                    alt="logo canal" id="video5-logo">
+                                    alt="logo del Canal de V5" class="channel-size">
                             </div>
-                            <div class="video-title-5">
+                            <div class="video-name-5">
                                 <p><strong>La Entrada Decía “NO PASAR”... Pero Decidieron Ignorarla</strong></p>
                             </div>
-                            <div class="video-option-5">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones de v4"
-                                    id="option-v5">
+                            <div class="video-options">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
+                                   
                             </div>
                         </section>
                         <div class="viewers-name-5">
@@ -221,22 +218,22 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-6">
-                        <div class="thumbnail-6">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 180228.png"
-                                alt="miniatura-6" id="image6">
+                                alt="miniatura-6" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-6">
-                            <div class="channel-logo-6">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 180245.png"
-                                    id="video6-logo">
+                                    alt="Logo del canal de v-6" class="channel-size">
                             </div>
-                            <div class="video-title-6">
+                            <div class="video-name-6">
                                 <p><strong>Pato es denunciado por atacar a mascotas y recibe prisión
                                         domiciliaria</strong></p>
                             </div>
-                            <div class="video-option-6">
+                            <div class="video-options">
                                 <img src=".\images\videos images\options-vertical-svgrepo-com.svg"
-                                    alt="opciones video 6" id="option-v6">
+                                    alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-6">
@@ -245,20 +242,20 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-7">
-                        <div class="thumbnail-7">
+                        <div class="thumbnail">
                             <img src=".\images\videos images\Captura de pantalla 2025-08-13 183052.png"
-                                alt="miniatura-7" id="image7">
+                                alt="miniatura-7" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-7">
-                            <div class="channel-logo-7">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 183118.png"
-                                    alt="logo de canal 7" id="video7-logo">
+                                    alt="Logo del Canal de V7" class="channel-size">
                             </div>
-                            <div class="video-title-7">
+                            <div class="video-name-7">
                                 <p><strong>¿Qué pasa si entras a un microondas? (según la ciencia)</strong></p>
                             </div>
-                            <div class="video-option-7">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" id="option-v7">
+                            <div class="video-options">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-7">
@@ -267,19 +264,19 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-8">
-                        <div class="thumbnail-8">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 183825.png" id="image8">
+                        <div class="thumbnail">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 183825.png" alt="Miniatura-8" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-8">
-                            <div class="channel-logo-8">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 183849.png"
-                                    id="video8-logo">
+                                    alt="logo del Canal de V8" class="channel-size">
                             </div>
-                            <div class="video-title-8">
+                            <div class="video-name-8">
                                 <p><strong>TODAS las CLASES SOCIALES explicadas en 10 minutos</strong></p>
                             </div>
-                            <div class="video-option-8">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" id="option-v8">
+                            <div class="video-options">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-8">
@@ -288,19 +285,19 @@
                         </div>
                     </section>
                     <section class="video-container" id="v-9">
-                        <div class="thumbnail-9">
-                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 190109.png" id="image9">
+                        <div class="thumbnails">
+                            <img src=".\images\videos images\Captura de pantalla 2025-08-13 190109.png" alt="Miniaatura-9" class="thumbnails-size">
                         </div>
-                        <section class="titular-channel-9">
-                            <div class="channel-logo-9">
+                        <section class="titulares">
+                            <div class="channel-logo">
                                 <img src=".\images\videos images\Captura de pantalla 2025-08-13 190123.png"
-                                    id="video9-logo">
+                                    alt="logo del Canal de V9" class="channel-size">
                             </div>
-                            <div class="video-title-9">
+                            <div class="video-name-9">
                                 <p><strong>¿Qué es ese bicho en la pared?/La polilla del estuche</strong></p>
                             </div>
-                            <div class="video-option-8">
-                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" id="option-v9">
+                            <div class="video-options">
+                                <img src=".\images\videos images\options-vertical-svgrepo-com.svg" alt="opciones del video" class="options-size">
                             </div>
                         </section>
                         <div class="viewers-name-9">
